--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
             rowCount.push(model[i]['size'].length);
         }
         keyboard.setAttribute('class', 'keyboard');
-        for (var i = 6 - 1; i >= 0; i--) {
+        for (var i = 0; i < model.length; i++) {
+        // for (var i = model.length - 1; i >= 0; i--) {
             var row = document.createElement('div');
             row.setAttribute('class', 'row');
             for (var j = 0; j < rowCount[i]; j++) {
@@ -85,8 +86,8 @@
             keyboard.appendChild(row);
         }
         var size = 0;
-        for (var i = 0; i < model[model.length - 1]['size'].length; i++) {
-            size = size + parseFloat(model[model.length - 1]['size'][i].replace('_', '.'), 10);
+        for (var i = 0; i < model[0]['size'].length; i++) {
+            size = size + parseFloat(model[0]['size'][i].replace('_', '.'), 10);
         }
         dom.style.width = size * 56 + 'px';
         dom.appendChild(keyboard);
@@ -97,6 +98,11 @@
 <body>
     <h1>Keyboard Layout Size</h1>
     <h2>This page provide Some Keyboard Model you can check keycaps Size</h2>
+    <section>
+        <h3>Vortex Core 40</h3>
+        <div id="core_40"></div>
+    </section>
+
     <section>
         <h3>Vortex Race 3</h3>
         <div id="race3"></div>
@@ -123,6 +129,16 @@
     </section>
 
     <section>
+        <h3>KBT Pure</h3>
+        <div id="kbt_pure"></div>
+    </section>
+
+    <section>
+        <h3>KBT Pure Pro</h3>
+        <div id="kbt_pure_pro"></div>
+    </section>
+
+    <section>
         <!-- <h3>96_type1</h3> -->
         <div id="type1_96"></div>
     </section>
@@ -135,151 +151,201 @@
 <script>
 var KEYBOARD = {};
 
+KEYBOARD['core_40'] = [
+    {
+        size: ['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1']
+    },
+    {
+        size: ['1_25', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_75']
+    },
+    {
+        size: ['1_75', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_25', '1']
+    },
+    {
+        size: ['1_25', '1', '1', '1', '1_75', '2_75', '1', '1', '1', '1_25']
+    }
+];
+
 KEYBOARD['race3'] = [{
-        val: ['Ctrl', 'Option', 'Command', 'Spacebar', 'Command', 'Option', 'Ctrl', 'Left', 'Down', 'Right'],
-        size: ['1_25', '1_25', '1_25', '6_25', '1', '1', '1', '1', '1', '1']
-    },
-    {
-        val: ['Shift', 'Z', 'X', 'C', 'V', 'B', 'N', 'M', ',', '.', '/', 'Shift', 'Up', 'End'],
-        size: ['2_25', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_75', '1', '1']
-    },
-    {
-        val: ['Caps Lock', 'A', 'S', 'D', 'F', 'G', 'H', 'J', 'K', 'L', ';', '\'', 'Enter', 'PgDn'],
-        size: ['1_75', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2_25', '1']
-    },
-    {
-        val: ['Tab', 'Q', 'W', 'E', 'R', 'T', 'Y', 'U', 'I', 'O', 'P', '[', ']', '\/', 'PgUp'],
-        size: ['1_5', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_5', '1']
+        val: ['esc', 'F1', 'F2', 'F3', 'F4', 'F5', 'F6', 'F7', 'F8', 'F9', 'F10', 'F11', 'F12', 'Pn', 'Delete'],
+        size: ['1_5', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_5']
     },
     {
         val: ['~', '1', '2', '3', '4', '5', '6', '7', '8', '9', '0', '-', '=', 'Back Space', 'Home'],
         size: ['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2', '1']
     },
     {
-        val: ['esc', 'F1', 'F2', 'F3', 'F4', 'F5', 'F6', 'F7', 'F8', 'F9', 'F10', 'F11', 'F12', 'Pn', 'Delete'],
-        size: ['1_5', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_5']
+        val: ['Tab', 'Q', 'W', 'E', 'R', 'T', 'Y', 'U', 'I', 'O', 'P', '[', ']', '\/', 'PgUp'],
+        size: ['1_5', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_5', '1']
+    },
+    {
+        val: ['Caps Lock', 'A', 'S', 'D', 'F', 'G', 'H', 'J', 'K', 'L', ';', '\'', 'Enter', 'PgDn'],
+        size: ['1_75', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2_25', '1']
+    },
+    {
+        val: ['Shift', 'Z', 'X', 'C', 'V', 'B', 'N', 'M', ',', '.', '/', 'Shift', 'Up', 'End'],
+        size: ['2_25', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_75', '1', '1']
+    },
+    {
+        val: ['Ctrl', 'Option', 'Command', 'Spacebar', 'Command', 'Option', 'Ctrl', 'Left', 'Down', 'Right'],
+        size: ['1_25', '1_25', '1_25', '6_25', '1', '1', '1', '1', '1', '1']
     }
 ];
 
-KEYBOARD['yoda2_ansi'] = [{
-        val: ['', '', '', '', 'Mouse left', 'FN1', 'Mouse right', '', '', '', '', '', ''],
-        size: ['blank_1_25', 'blank_1_25', 'blank_1_25', 'blank_1_25', '1_25', '1', '1_25', 'blank_1_25', 'blank_1_25', 'blank_1', 'blank_1', 'blank_1', 'blank_1']
-    },
+KEYBOARD['yoda2_ansi'] = [
     {
-        val: ['Ctrl', 'Win', 'Alt', 'Spacebar', 'FN1', 'Alt', 'Win', 'Ctrl'],
-        size: ['1_25', '1_25', '1_25', '6_25', '1_25', '1_25', '1_25', '1_25']
-    },
-    {
-        val: ['Shift', 'Z', 'X', 'C', 'V', 'B', 'N', 'M', ',', '.', '/', 'Shift'],
-        size: ['2_25', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2_75']
-    },
-    {
-        val: ['Caps Lock', 'A', 'S', 'D', 'F', 'G', 'H', 'J', 'K', 'L', ';', '\'', 'Enter'],
-        size: ['1_75', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2_25']
+        val: ['Esc', '1', '2', '3', '4', '5', '6', '7', '8', '9', '0', '-', '=', 'Back Space'],
+        size: ['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2']
     },
     {
         val: ['Tab', 'Q', 'W', 'E', 'R', 'T', 'Y', 'U', 'I', 'O', 'P', '[', ']', '\\'],
         size: ['1_5', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_5']
     },
     {
-        val: ['Esc', '1', '2', '3', '4', '5', '6', '7', '8', '9', '0', '-', '=', 'Back Space'],
-        size: ['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2']
+        val: ['Caps Lock', 'A', 'S', 'D', 'F', 'G', 'H', 'J', 'K', 'L', ';', '\'', 'Enter'],
+        size: ['1_75', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2_25']
+    },
+    {
+        val: ['Shift', 'Z', 'X', 'C', 'V', 'B', 'N', 'M', ',', '.', '/', 'Shift'],
+        size: ['2_25', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2_75']
+    },
+    {
+        val: ['Ctrl', 'Win', 'Alt', 'Spacebar', 'FN1', 'Alt', 'Win', 'Ctrl'],
+        size: ['1_25', '1_25', '1_25', '6_25', '1_25', '1_25', '1_25', '1_25']
+    },
+    {
+        val: ['', '', '', '', 'Mouse left', 'FN1', 'Mouse right', '', '', '', '', '', ''],
+        size: ['blank_1_25', 'blank_1_25', 'blank_1_25', 'blank_1_25', '1_25', '1', '1_25', 'blank_1_25', 'blank_1_25', 'blank_1', 'blank_1', 'blank_1', 'blank_1']
     }
 ];
 
-KEYBOARD['yoda2_iso'] = [{
-    val: ['', '', '', '', 'Mouse left', 'FN1', 'Mouse right', '', '', '', '', '', ''],
-    size: ['blank_1_25', 'blank_1_25', 'blank_1_25', 'blank_1_25', '1_25', '1', '1_25', 'blank_1_25', 'blank_1_25', 'blank_1', 'blank_1', 'blank_1', 'blank_1']
-}, {
-    val: ['Ctrl', 'Win', 'Alt', 'Spacebar', 'FN1', 'Alt', 'Win', 'Ctrl'],
-    size: ['1_25', '1_25', '1_25', '6_25', '1_25', '1_25', '1_25', '1_25']
-}, {
-    val: ['Shift', '<', 'Z', 'X', 'C', 'V', 'B', 'N', 'M', ',', '.', '/', 'Shift'],
-    size: ['1_25', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2_75']
-}, {
-    val: ['Caps Lock', 'A', 'S', 'D', 'F', 'G', 'H', 'J', 'K', 'L', ';', '\'', '\\'],
-    size: ['1_75', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1']
-}, {
-    val: ['Tab', 'Q', 'W', 'E', 'R', 'T', 'Y', 'U', 'I', 'O', 'P', '[', ']', 'Enter'],
-    size: ['1_5', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', 'enter_iso']
-}, {
-    val: ['Esc', '1', '2', '3', '4', '5', '6', '7', '8', '9', '0', '-', '=', 'Back Space'],
-    size: ['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2']
-}];
+KEYBOARD['yoda2_iso'] = [
+    {
+        val: ['Esc', '1', '2', '3', '4', '5', '6', '7', '8', '9', '0', '-', '=', 'Back Space'],
+        size: ['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2']
+    }, {
+        val: ['Tab', 'Q', 'W', 'E', 'R', 'T', 'Y', 'U', 'I', 'O', 'P', '[', ']', 'Enter'],
+        size: ['1_5', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', 'enter_iso']
+    }, {
+        val: ['Caps Lock', 'A', 'S', 'D', 'F', 'G', 'H', 'J', 'K', 'L', ';', '\'', '\\'],
+        size: ['1_75', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1']
+    }, {
+        val: ['Shift', '<', 'Z', 'X', 'C', 'V', 'B', 'N', 'M', ',', '.', '/', 'Shift'],
+        size: ['1_25', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2_75']
+    }, {
+        val: ['Ctrl', 'Win', 'Alt', 'Spacebar', 'FN1', 'Alt', 'Win', 'Ctrl'],
+        size: ['1_25', '1_25', '1_25', '6_25', '1_25', '1_25', '1_25', '1_25']
+    }, {
+        val: ['', '', '', '', 'Mouse left', 'FN1', 'Mouse right', '', '', '', '', '', ''],
+        size: ['blank_1_25', 'blank_1_25', 'blank_1_25', 'blank_1_25', '1_25', '1', '1_25', 'blank_1_25', 'blank_1_25', 'blank_1', 'blank_1', 'blank_1', 'blank_1']
+    }
+];
 
-KEYBOARD['yoda2_diy'] = [{
-    size: ['blank_1_25', 'blank_1_25', 'blank_1_25', 'blank_1_25', '1_25', '1', '1_25', 'blank_1_25', 'blank_1_25', 'blank_1', 'blank_1', 'blank_1', 'blank_1']
-}, {
-    size: ['1_5', '1_5', '1_5', '6', '1_5', '1_5', '1_5']
-}, {
-    size: ['1_25', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_75', '1']
-}, {
-    size: ['1_75', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1']
-}, {
-    size: ['1_5', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', 'enter_iso']
-}, {
-    size: ['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1']
-}];
+KEYBOARD['yoda2_diy'] = [
+    {
+        size: ['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1']
+    }, {
+        size: ['1_5', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', 'enter_iso']
+    }, {
+        size: ['1_75', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1']
+    }, {
+        size: ['1_25', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_75', '1']
+    }, {
+        size: ['1_5', '1_5', '1_5', '6', '1_5', '1_5', '1_5']
+    }, {
+        size: ['blank_1_25', 'blank_1_25', 'blank_1_25', 'blank_1_25', '1_25', '1', '1_25', 'blank_1_25', 'blank_1_25', 'blank_1', 'blank_1', 'blank_1', 'blank_1']
+    }
+];
 
 KEYBOARD['fc_980'] = [{
-        size: ['1_25', '1', '1_25', '6_25', '1', '1', '1_25', '1', '1', '1', '1', '1']
-    },
-    {
-        size: ['2_25', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_75', '1', '1', '1', '1', 'enter']
-    },
-    {
-        size: ['1_75', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2_25', '1', '1', '1']
-    },
-    {
-        size: ['1_5', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_5', '1', '1', '1', 'enter']
+        size: ['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1']
     },
     {
         size: ['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2', '1', '1', '1', '1']
     },
     {
-        size: ['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1']
+        size: ['1_5', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_5', '1', '1', '1', 'enter']
+    },
+    {
+        size: ['1_75', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2_25', '1', '1', '1']
+    },
+    {
+        size: ['2_25', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_75', '1', '1', '1', '1', 'enter']
+    },
+    {
+        size: ['1_25', '1', '1_25', '6_25', '1', '1', '1_25', '1', '1', '1', '1', '1']
     }
 ];
 
 KEYBOARD['type1_96'] = [{
-        size: ['1_25', '1_25', '1_25', '6_25', '1', '1', '1', '1', '1', '1', '1', '1']
-    },
-    {
-        size: ['2_25', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_75', '1', '1', '1', '1', 'enter']
-    },
-    {
-        size: ['1_75', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2_25', '1', '1', '1']
-    },
-    {
-        size: ['1_5', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_5', '1', '1', '1', 'enter']
+        size: ['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1']
     },
     {
         size: ['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2', '1', '1', '1', '1']
     },
     {
-        size: ['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1']
+        size: ['1_5', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_5', '1', '1', '1', 'enter']
+    },
+    {
+        size: ['1_75', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2_25', '1', '1', '1']
+    },
+    {
+        size: ['2_25', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_75', '1', '1', '1', '1', 'enter']
+    },
+    {
+        size: ['1_25', '1_25', '1_25', '6_25', '1', '1', '1', '1', '1', '1', '1', '1']
     }
 ];
 
 KEYBOARD['type2_96'] = [{
-        size: ['1_25', '1_25', '1_25', '6_25', '1_25', '1_25', '1_25', '1_25', '1', '1', '1']
+        size: ['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1']
+    },
+    {
+        size: ['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2', '1', '1', '1', '1']
+    },
+    {
+        size: ['1_5', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_5', '1', '1', '1', 'enter']
+    },
+    {
+        size: ['1_75', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2_25', '1', '1', '1']
     },
     {
         size: ['2_25', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2_75', '1', '1', '1', 'enter']
     },
     {
-        size: ['1_75', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2_25', '1', '1', '1']
-    },
-    {
-        size: ['1_5', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_5', '1', '1', '1', 'enter']
-    },
-    {
-        size: ['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2', '1', '1', '1', '1']
-    },
-    {
-        size: ['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1']
+        size: ['1_25', '1_25', '1_25', '6_25', '1_25', '1_25', '1_25', '1_25', '1', '1', '1']
     }
 ];
+
+KEYBOARD['kbt_pure'] = [
+    {
+        size: ['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2']
+    }, {
+        size: ['1_5', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_5']
+    }, {
+        size: ['1_75', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2_25']
+    }, {
+        size: ['1_25', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_75', '1']
+    }, {
+        size: ['1_25', '1_25', '1_25', '6_25', '1_25', '1_25', '1_25', '1_25']
+    }
+];
+
+KEYBOARD['kbt_pure_pro'] = [
+    {
+        size: ['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1']
+    }, {
+        size: ['1_5', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_5']
+    }, {
+        size: ['1_75', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2_25']
+    }, {
+        size: ['2', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1']
+    }, {
+        size: ['1_25', '1', '1', '1_25', '4_5', '1', '1', '1', '1', '1', '1']
+    }
+];
+
+initKeyboard(document.querySelector('#core_40'), KEYBOARD['core_40']);
 
 initKeyboard(document.querySelector('#race3'), KEYBOARD['race3']);
 
@@ -290,6 +356,10 @@ initKeyboard(document.querySelector('#yoda2_iso'), KEYBOARD['yoda2_iso']);
 initKeyboard(document.querySelector('#yoda2_diy'), KEYBOARD['yoda2_diy']);
 
 initKeyboard(document.querySelector('#fc_980'), KEYBOARD['fc_980']);
+
+initKeyboard(document.querySelector('#kbt_pure'), KEYBOARD['kbt_pure']);
+
+initKeyboard(document.querySelector('#kbt_pure_pro'), KEYBOARD['kbt_pure_pro']);
 
 // initKeyboard(document.querySelector('#type1_96'), KEYBOARD['type1_96']);
 
