--- a/index.html
+++ b/index.html
@@ -168,6 +168,11 @@
             <h3>Morgan 65</h3>
             <div id="morgan_65"></div>
         </section>
+
+        <section>
+            <h3>Razer blackwidow lite</h3>
+            <div id="razer_blackwidow_lite"></div>
+        </section>
     </body>
     <script>
         var KEYBOARD = {};
@@ -420,6 +425,33 @@
             }
         ];
 
+        KEYBOARD['razer_blackwidow_lite'] = [
+            {
+                val: ['Esc', '', 'F1', 'F2', 'F3', 'F4', '', 'F5', 'F6', 'F7', 'F8', '', 'F9', 'F10', 'F11', 'F12', '', 'prtSc', 'Scrlk', 'Pause'],
+                size: ['1', 'blank_1', '1', '1', '1', '1', 'blank_0_5', '1', '1', '1', '1', 'blank_0_5', '1', '1', '1', '1', 'blank_0_5', '1', '1', '1']
+            },
+            {
+                val: ['Esc', '1', '2', '3', '4', '5', '6', '7', '8', '9', '0', '-', '=', 'Back Space', '', 'Ins', 'Home', 'Pgup'],
+                size: ['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2', 'blank_0_5', '1', '1', '1']
+            },
+            {
+                val: ['Tab', 'Q', 'W', 'E', 'R', 'T', 'Y', 'U', 'I', 'O', 'P', '[', ']', '\\', '', 'Del', 'End', 'Pgdn'],
+                size: ['1_5', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_5', 'blank_0_5', '1', '1', '1']
+            },
+            {
+                val: ['Caps Lock', 'A', 'S', 'D', 'F', 'G', 'H', 'J', 'K', 'L', ';', '\'', 'Enter'],
+                size: ['1_75', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2_25']
+            },
+            {
+                val: ['Shift', 'Z', 'X', 'C', 'V', 'B', 'N', 'M', ',', '.', '/', 'Shift', '', '', 'Up'],
+                size: ['2_25', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2_75', 'blank_0_5', 'blank_1', '1']
+            },
+            {
+                val: ['Ctrl', 'Win', 'Alt', 'Spacebar', 'FN1', 'Alt', 'Win', 'Ctrl', '', 'Left', 'Down', 'Right'],
+                size: ['1_5', '1', '1_5', '6', '1_5', '1', '1', '1_5', 'blank_0_5', '1', '1', '1']
+            }
+        ];
+
         initKeyboard(document.querySelector('#core_40'), KEYBOARD['core_40']);
 
         initKeyboard(document.querySelector('#race3'), KEYBOARD['race3']);
@@ -445,6 +477,8 @@
         initKeyboard(document.querySelector('#bioi_g60ble'), KEYBOARD['bioi_g60ble']);
 
         initKeyboard(document.querySelector('#morgan_65'), KEYBOARD['morgan_65']);
+
+        initKeyboard(document.querySelector('#razer_blackwidow_lite'), KEYBOARD['razer_blackwidow_lite']);
     </script>
 
 </html>
