--- a/index.html
+++ b/index.html
@@ -72,6 +72,44 @@
             height: calc(-56px/2);
             border: 7px solid transparent;
         }
+
+        /* susuwatar */
+        .susuwatar .keycap_1 {
+            background-color: rgb(93, 89, 86);
+            border-color: rgb(45, 41, 38);
+            color: rgb(176, 170, 152);
+        }
+
+        .susuwatar .keycap_1_25,
+        .susuwatar .keycap_2,
+        .susuwatar .keycap_1_5_col {
+            background-color: rgb(68, 68, 68);
+            border-color: rgb(11, 11, 11);
+        }
+
+        .susuwatar>div>div:nth-child(1)>div:nth-child(1),
+        .susuwatar>div>div:nth-child(1)>div:nth-child(14) {
+            background: rgb(206, 81, 62);
+            border-color: rgb(192, 31, 7);
+        }
+
+        .susuwatar>div>div:nth-child(5)>div:nth-child(2),
+        .susuwatar>div>div:nth-child(5)>div:nth-child(3),
+        .susuwatar>div>div:nth-child(5)>div:nth-child(4),
+        .susuwatar>div>div:nth-child(5)>div:nth-child(5),
+        .susuwatar>div>div:nth-child(5)>div:nth-child(8),
+        .susuwatar>div>div:nth-child(5)>div:nth-child(9),
+        .susuwatar>div>div:nth-child(5)>div:nth-child(10),
+        .susuwatar>div>div:nth-child(5)>div:nth-child(11) {
+            color: rgb(46, 142, 195);
+        }
+
+        .susuwatar>div>div:nth-child(2)>div:nth-child(3),
+        .susuwatar>div>div:nth-child(3)>div:nth-child(2),
+        .susuwatar>div>div:nth-child(3)>div:nth-child(3),
+        .susuwatar>div>div:nth-child(3)>div:nth-child(4) {
+            color: rgb(245, 87, 30);
+        }
     </style>
     <script>
         function initKeyboard(dom, model, val) {
@@ -204,7 +242,7 @@
     </section>
     <section>
         <h3>ergorth</h3>
-        <div id="ergorth"></div>
+        <div id="ergorth" class="susuwatar"></div>
     </section>
     <section>
         <h3>RM6</h3>
@@ -598,6 +636,20 @@
     initKeyboard(document.querySelector('#rm6'), KEYBOARD['rm6'], true);
 
     initKeyboard(document.querySelector('#m93'), KEYBOARD['m93']);
+
+    // susuwatar
+    for (let index = 0; index < document.querySelectorAll(".susuwatar .keycap_1_25").length; index++) {
+        document.querySelectorAll(".susuwatar .keycap_1_25")[index].innerHTML = '';
+
+    }
+    for (let index = 0; index < document.querySelectorAll(".susuwatar .keycap_2").length; index++) {
+        document.querySelectorAll(".susuwatar .keycap_2")[index].innerHTML = '';
+
+    }
+    for (let index = 0; index < document.querySelectorAll(".susuwatar .keycap_1_5_col").length; index++) {
+        document.querySelectorAll(".susuwatar .keycap_1_5_col")[index].innerHTML = '';
+
+    }
 </script>
 
 </html>
