--- a/index.html
+++ b/index.html
@@ -254,6 +254,16 @@
         <div id="m93"></div>
     </section>
 
+    <section>
+        <h3>custom 60%</h3>
+        <div id="custom_60"></div>
+    </section>
+
+    <section>
+        <h3>Time reforged(hotswap ver)</h3>
+        <div id="time_reforged_hotswap"></div>
+    </section>
+
 </body>
 <script>
     var KEYBOARD = {};
@@ -603,6 +613,71 @@
         }
     ];
 
+    KEYBOARD['custom_60'] = [
+        {
+            val: ['Esc', '1', '2', '3', '4', '5', '6', '7', '8', '9', '0', '-', '=', 'Back Space'],
+            size: ['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2']
+        },
+        {
+            val: ['Tab', 'Q', 'W', 'E', 'R', 'T', 'Y', 'U', 'I', 'O', 'P', '[', ']', 'Enter'],
+            size: ['1_5', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', 'enter_iso']
+        }, {
+            val: ['Caps Lock', 'A', 'S', 'D', 'F', 'G', 'H', 'J', 'K', 'L', ';', '\'', '\\'],
+            size: ['1_75', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1']
+        },
+        {
+            val: ['Shift', 'Z', 'X', 'C', 'V', 'B', 'N', 'M', ',', '.', '/', 'Shift'],
+            size: ['2_25', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2_75']
+        },
+        {
+            val: ['Ctrl', 'Win', 'Alt', 'Spacebar', 'FN1', 'Alt', 'Win', 'Ctrl'],
+            size: ['1_5', '1', '1_5', '3', '2_75', '1_5', '1_25', '1_25', '1_25']
+        },
+        {
+            val: ['Ctrl', 'Win', 'Alt', 'Spacebar', 'FN1', 'Alt', 'Win', 'Ctrl'],
+            size: ['blank_1']
+        },
+        {
+            val: ['Ctrl', 'Win', 'Alt', 'Spacebar', 'FN1', 'Alt', 'Win', 'Ctrl'],
+            size: ['1_5', '1', '1_5', '3', '3', '1_5', '1', '1', '1_5']
+        },
+        {
+            val: ['Ctrl', 'Win', 'Alt', 'Spacebar', 'FN1', 'Alt', 'Win', 'Ctrl'],
+            size: ['blank_1']
+        },
+        {
+            val: ['Ctrl', 'Win', 'Alt', 'Spacebar', 'FN1', 'Alt', 'Win', 'Ctrl'],
+            size: ['1_25', '1_25', '1_5', '3', '3', '1_25', '1_25', '1_25', '1_25']
+        },
+    ];
+
+    KEYBOARD['time_reforged_hotswap'] = [
+        {
+            val: ['Esc', '', 'F1', 'F2', 'F3', 'F4', '', 'F5', 'F6', 'F7', 'F8', '', 'F9', 'F10', 'F11', 'F12', '', 'prtSc', 'Scrlk', 'Pause'],
+            size: ['1', 'blank_1', '1', '1', '1', '1', 'blank_0_5', '1', '1', '1', '1', 'blank_0_5', '1', '1', '1', '1', 'blank_0_5', '1', '1', '1']
+        },
+        {
+            val: ['Esc', '1', '2', '3', '4', '5', '6', '7', '8', '9', '0', '-', '=', 'Back Space', '', 'Ins', 'Home', 'Pgup'],
+            size: ['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2', 'blank_0_5', '1', '1', '1']
+        },
+        {
+            val: ['Tab', 'Q', 'W', 'E', 'R', 'T', 'Y', 'U', 'I', 'O', 'P', '[', ']', '\\', '', 'Del', 'End', 'Pgdn'],
+            size: ['1_5', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_5', 'blank_0_5', '1', '1', '1']
+        },
+        {
+            val: ['Caps Lock', 'A', 'S', 'D', 'F', 'G', 'H', 'J', 'K', 'L', ';', '\'', 'Enter'],
+            size: ['1_75', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2_25']
+        },
+        {
+            val: ['Shift', 'Z', 'X', 'C', 'V', 'B', 'N', 'M', ',', '.', '/', 'Shift', '', '', 'Up'],
+            size: ['2_25', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2_75', 'blank_0_5', 'blank_1', '1']
+        },
+        {
+            val: ['Ctrl', 'Win', 'Alt', 'Spacebar', 'Alt', 'Win', 'Ctrl', '', 'Left', 'Down', 'Right'],
+            size: ['1_5', '1', '1_5', '7', '1_5', '1', '1_5', 'blank_0_5', '1', '1', '1']
+        }
+    ];
+
     initKeyboard(document.querySelector('#core_40'), KEYBOARD['core_40']);
 
     initKeyboard(document.querySelector('#race3'), KEYBOARD['race3']);
@@ -636,6 +711,11 @@
     initKeyboard(document.querySelector('#rm6'), KEYBOARD['rm6'], true);
 
     initKeyboard(document.querySelector('#m93'), KEYBOARD['m93']);
+
+    initKeyboard(document.querySelector('#custom_60'), KEYBOARD['custom_60']);
+
+    initKeyboard(document.querySelector('#time_reforged_hotswap'), KEYBOARD['time_reforged_hotswap']);
+
 
     // susuwatar
     for (let index = 0; index < document.querySelectorAll(".susuwatar .keycap_1_25").length; index++) {
