--- a/index.html
+++ b/index.html
@@ -269,6 +269,11 @@
         <div id="portico"></div>
     </section>
 
+    <section>
+        <h3>64key 60%</h3>
+        <div id="gh64"></div>
+    </section>
+
 </body>
 <script>
     var KEYBOARD = {};
@@ -691,9 +696,23 @@
         }, {
             size: ['1_75', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2_25', '1']
         }, {
-            size: ['1_25', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_75', '1', '1']
+            size: ['2_25', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_75', '1', '1']
         }, {
             size: ['1_25', '1_25', '1_25', '6_25', '1_25', '1_25', 'blank_0_5', '1', '1', '1']
+        }
+    ];
+
+    KEYBOARD['gh64'] = [
+        {
+            size: ['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2']
+        }, {
+            size: ['1_5', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1_5']
+        }, {
+            size: ['1_75', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '2_25']
+        }, {
+            size: ['2', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1']
+        }, {
+            size: ['1_25', '1_25', '1_25', '6_25', '1', '1', '1', '1', '1']
         }
     ];
 
@@ -736,6 +755,8 @@
     initKeyboard(document.querySelector('#time_reforged_hotswap'), KEYBOARD['time_reforged_hotswap']);
 
     initKeyboard(document.querySelector('#portico'), KEYBOARD['portico']);
+
+    initKeyboard(document.querySelector('#gh64'), KEYBOARD['gh64']);
 
 
     // susuwatar
